force-app/main/default/objects/Inventory_Items__c/Inventory_Items__c.object-meta.xml
<CustomObject>
    <description>Cópias de um filme</description>
    <label>Inventory Items</label>
    <nameField>
        <displayFormat>ITEM-{0000}</displayFormat>
        <label>Switch Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>InventoryItems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>