force-app/main/default/objects/Inventory_Items__c/fields/Rents_Counter_By_Item__c.field-meta.xml
<CustomField>
    <fullName>Rents_Counter_By_Item__c</fullName>
    <description>Vezes que o item foi alugado</description>
    <label>Rents Counter By Item</label>
    <summaryForeignKey>Rent__c.Inventory_Items__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>